kubernetes/pdfgenerator-pdflayout-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdflayout-api
  namespace: dpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdflayout-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pdflayout-api
    spec:
      containers:
      - image: "||docker||/dpc-pdfgenerator/pdflayout-api:||version||"
        name: pdflayout-api
        volumeMounts:
        - name: output-pv
          mountPath: /output
        ports:
        - containerPort: 80
        resources: 
          limits:
            memory: "256Mi"
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 30
      volumes:
        - name: output-pv
          persistentVolumeClaim:
            claimName: pdflayout
          
---
apiVersion: v1
kind: Service
metadata:
  name: pdflayout-api
  namespace: dpc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pdflayout-api
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pdflayout-api
  namespace: dpc
spec:
  rules:
  - host: "||layout_host||"
    http:
      paths:
      - backend:
          serviceName: pdflayout-api
          servicePort: 80
